--- a/vtuber.html
+++ b/vtuber.html
@@ -92,16 +92,16 @@
     
           <div class="art-display">
             <div class="half-image loading-icon">
-              <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154593724081385532/Comp_36.gif">
+              <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154593723733254225/Comp_33.gif?ex=65fce233&is=65ea6d33&hm=8068cd0cf9888185436fea00b248996e2311005db3891ea2f4eacca0dca75f12&">
             </div>
             <div class="half-image loading-icon">
-              <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154593724463071252/Comp_35.gif">
+              <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154593724081385532/Comp_36.gif?ex=65fce233&is=65ea6d33&hm=9e0191f002b88d9b492666a7ed5ea160adf1a808627687e95c1a9e48da75bff9&">
             </div>
             <div class="half-image loading-icon">
-              <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154593723733254225/Comp_33.gif">
+              <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154593724463071252/Comp_35.gif?ex=65fce233&is=65ea6d33&hm=e9fc6ded260ab6c9d04a45721edc3b7dadc045560e3ceb073d25d8c76dfc717e&">
             </div>
             <div class="half-image loading-icon">
-              <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154593724890882169/Comp_34.gif">
+              <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154593724890882169/Comp_34.gif?ex=65fce233&is=65ea6d33&hm=4a3127cb1d2efeba84d75f10a28f1ff5bf0e71bf2e241c4d381202814fb29858&">
             </div>
 </div>
 
