--- a/trashtaste.html
+++ b/trashtaste.html
@@ -57,22 +57,22 @@
 
       <div class="art-display"><br>
         <div class="half-image loading-icon">
-          <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154476988728361021/Comp_28.gif">
+          <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154476986253709413/Comp_2.gif?ex=65fc757a&is=65ea007a&hm=66aa98b38f3f6affae1746396ae2ea025972177acebb03794fcc91b097de1723&">
         </div>
         <div class="half-image loading-icon">
-          <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154476986253709413/Comp_2.gif">
+          <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154476988728361021/Comp_28.gif?ex=65fc757b&is=65ea007b&hm=2c5382296ca4e0486ec9214ade8354cfd67bfb42d4250844a40932dbb5fd0cda&">
         </div>
       <div class="half-image loading-icon">
-        <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154476989084868629/Comp_27.gif">
+        <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154476989084868629/Comp_27.gif?ex=65fc757b&is=65ea007b&hm=b172c71643bb5562097b45d208fc25ebf48ca6d73c2531e69c0a23b7e1a02534&">
       </div>
       <div class="half-image loading-icon">
-        <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154476987776254123/Comp_30.gif">
+        <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154476987776254123/Comp_30.gif?ex=65fc757b&is=65ea007b&hm=59f57a6ba75708e777bdfb7f69bcf7fc20cbd0624f06f001e8667331630a70f1&">
       </div>
       <div class="half-image loading-icon">
-        <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154476988304724019/Comp_29.gif">
+        <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154476987302285424/Comp_31.gif?ex=65fc757a&is=65ea007a&hm=4e1068d96ac952ae76435dc4055d2ba3a0f7678f4b5da6730125e2d41e96be45&">
       </div>
       <div class="full-image loading-icon">
-        <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154476986954162225/Comp_32.gif">
+        <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154476986954162225/Comp_32.gif?ex=65fc757a&is=65ea007a&hm=77f7b56bc2676e867518c7f233522b44b325281eab159fd874cf335dcf1b0489&">
       </div>
     </div>
 
