--- a/lore.html
+++ b/lore.html
@@ -62,7 +62,7 @@
           <img src="https://cdn.discordapp.com/attachments/926858719684354058/1215716863401529404/Comp_20.gif?ex=65fdc38f&is=65eb4e8f&hm=7d520d8d16a09f8093012bd138ad34c6eb75c6fa8c72ea14b1f12948379ebcb8&">
         </div>
         <div class="half-image loading-icon">
-          <img src="https://cdn.discordapp.com/attachments/926858719684354058/1215717773142003833/Comp_15.gif?ex=65fdc468&is=65eb4f68&hm=5fbd13a357e0434aefa99d9647919e8de6aed51c5607fc4d80138916d11bf64e&">
+          <img src="https://cdn.discordapp.com/attachments/926858719684354058/1215717778653188126/Comp_18.gif?ex=65fdc469&is=65eb4f69&hm=a1a96b8221a54b0a3e612f9afd649d09d28934c0b6b82813ee5d472572987489&">
         </div>
       <div class="half-image loading-icon">
         <img src="https://cdn.discordapp.com/attachments/926858719684354058/1215717861990080603/dyseal_1.gif?ex=65fdc47d&is=65eb4f7d&hm=9f90cef3458b6dc50147edafb480778b654cfd5432cb460d9ae59e5ff86a8b07&">
@@ -115,7 +115,7 @@
             </div>
             <div class="half-image loading-icon">
               <img src="https://64.media.tumblr.com/b8c0ec7ddd0e5c850935f57d4d91a1ca/f7ce94b7df52147b-29/s540x810/621423f3695c893e89a3a1f7677f0055bdceb266.gifv">
-            </div>
+            </div> </div>
 
 
 
@@ -126,20 +126,18 @@
                   <h2>Full Video Samples</h2>
                 </div>
                 <div class="full-image">
-                  <div class="embed-container">
-                    <iframe src="https://www.youtube.com/embed/NqysS1OvF3" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-                  </div> 
-                  <br>   
-                  <div class="embed-container">
-                    <iframe src="https://www.youtube.com/embed/g6opNt3-khM" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-                  </div> 
-                  <br>     
+              
                   <div class="embed-container">
                     <iframe src="https://www.youtube.com/embed/EG3sUZA1tk4" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-                  </div> 
-                  <br>        
+                  </div>     
                   <div class="embed-container">
                     <iframe src="https://www.youtube.com/embed/PVW-pl2JdMs" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+                    <div class="embed-container">
+                      <iframe src="https://www.youtube.com/embed/NqysS1OvF3" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+                    </div>  
+                    <div class="embed-container">
+                      <iframe src="https://www.youtube.com/embed/g6opNt3-khM" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+                    </div> 
                   </div>   
                 </div>
 
