--- a/lore.html
+++ b/lore.html
@@ -52,7 +52,7 @@
     <div class="art-section">
       <div class="art-header">
         <h2>VTuber Lore Video Animation</h2>
-        <p>In partnership with a writer and artist, I am in charge of animating existing artwork for VTuber (virtual streamer) lore videos, a video that tells the story behind a VTuber's character. Below, you will find samples from projects ranging from indepenent VTubers to corporate/sponsored VTubers. Art by <a href="https://twitter.com/LaciaEverlight" text-decoration="none">Lacia</a></p>
+        <p>In partnership with a writer and artist, I was in charge of animating existing artwork for VTuber (virtual streamer) lore videos, a video that tells the story behind a VTuber's character. Below, you will find samples from projects ranging from independent VTubers to corporate/company-backed VTubers. Art by <a href="https://twitter.com/LaciaEverlight" text-decoration="none">Lacia<br><br></a></p>
 
       <div class="art-display"><br>
         <div class="half-image loading-icon">
