--- a/lore.html
+++ b/lore.html
@@ -129,12 +129,13 @@
               
                   <div class="embed-container">
                     <iframe src="https://www.youtube.com/embed/EG3sUZA1tk4" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-                  </div>     
+                  </div>  <br>   
                   <div class="embed-container">
                     <iframe src="https://www.youtube.com/embed/PVW-pl2JdMs" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+                  </div>  <br>   
                     <div class="embed-container">
                       <iframe src="https://www.youtube.com/embed/NqysS1OvF3" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-                    </div>  
+                    </div>  <br>   
                     <div class="embed-container">
                       <iframe src="https://www.youtube.com/embed/g6opNt3-khM" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
                     </div> 
