--- a/zines.html
+++ b/zines.html
@@ -57,49 +57,49 @@
 
       <div class="art-display"><br>
         <div class="half-image loading-icon">
-          <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154453660848373810/Comp_35.gif">
+          <img src="https://media.discordapp.net/attachments/926858719684354058/1154453660848373810/Comp_35.gif?ex=65fc5fc1&is=65e9eac1&hm=56ea6a0d153617c3c3339d8013617e0f4b2052859df92b3389df4b1a33503c1f&=">
         </div>
         <div class="half-image loading-icon">
-          <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154453661494280232/Comp_26.gif">
+          <img src="https://media.discordapp.net/attachments/926858719684354058/1154453661494280232/Comp_26.gif?ex=65fc5fc1&is=65e9eac1&hm=5381428d40e62fb9d08fc4f5c134a26900348fdf7dee282279efedcec5fad93b&=">
         </div>
       <div class="half-image loading-icon">
-        <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154453662106660894/Comp_27.gif">
+        <img src="https://media.discordapp.net/attachments/926858719684354058/1154453662106660894/Comp_27.gif?ex=65fc5fc1&is=65e9eac1&hm=026f36587c8449bf8d5483ebf08b1c14b7610b15f0ebbfce497148f980848089&=">
       </div>
       <div class="half-image loading-icon">
-        <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154453662605770872/Comp_28.gif">
+        <img src="https://media.discordapp.net/attachments/926858719684354058/1154453662605770872/Comp_28.gif?ex=65fc5fc1&is=65e9eac1&hm=077015c9956723cbd2b1b95b85dbec81e1000032228707316fc0a81761ceb8b5&=">
       </div>
       <div class="half-image loading-icon">
-        <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154453663184596992/Comp_29.gif">
+        <img src="https://media.discordapp.net/attachments/926858719684354058/1154453663184596992/Comp_29.gif?ex=65fc5fc2&is=65e9eac2&hm=d9c12050a55dc451b04a5763e5adab16a0db4c5cb243a3ed6a9b4ea48a54dccd&=">
       </div>
       <div class="half-image loading-icon">
-        <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154453663998279852/Comp_30.gif">
+        <img src="https://media.discordapp.net/attachments/926858719684354058/1154453663998279852/Comp_30.gif?ex=65fc5fc2&is=65e9eac2&hm=2c5a1899bc4ddc261af8a71e5d59cfbe5dee78b87d88d4318b3a0ab18a38dfea&=">
       </div>
     <div class="half-image loading-icon">
-      <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154453664409337926/Comp_31.gif">
+      <img src="https://media.discordapp.net/attachments/926858719684354058/1154453664409337926/Comp_31.gif?ex=65fc5fc2&is=65e9eac2&hm=eb04b4372da6a1960aba546705b3fe748be27018e6e79a0e01db54a17dd8197f&=">
     </div>
     <div class="half-image loading-icon">
-      <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154453664946204672/Comp_32.gif">
+      <img src="https://media.discordapp.net/attachments/926858719684354058/1154453664946204672/Comp_32.gif?ex=65fc5fc2&is=65e9eac2&hm=c891304e5b8b7e6c6f550cf3f8a146af7db19dea1cf4634058ba781ee38553c0&=">
     </div>
     <div class="half-image loading-icon">
-      <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154453665378222183/Comp_33.gif">
+      <img src="hhttps://media.discordapp.net/attachments/926858719684354058/1154453665378222183/Comp_33.gif?ex=65fc5fc2&is=65e9eac2&hm=59154ceab7003bf1b30eac5ce977dd3d8563bcccdc9009f99cfc69a78f7d7e90&=">
     </div>
     <div class="half-image loading-icon">
-      <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154453665906700288/Comp_34.gif">
+      <img src="https://media.discordapp.net/attachments/926858719684354058/1154453665906700288/Comp_34.gif?ex=65fc5fc2&is=65e9eac2&hm=57c4e114d271897145c8f25b1afc87056421ce5973d873e8abbc8174c08bb6dc&=">
     </div>
 
     <div class="half-image loading-icon">
-      <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154453720894017637/Comp_36.gif">
+      <img src="https://media.discordapp.net/attachments/926858719684354058/1154453720894017637/Comp_36.gif?ex=65fc5fcf&is=65e9eacf&hm=2dc87fa3fe0b018bd6161d62f8260894adbbf8bfdc7630f89c4be59ea90a116e&=">
     </div>
     <div class="half-image loading-icon">
-      <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154453721380552734/Comp_37.gif">
+      <img src="https://media.discordapp.net/attachments/926858719684354058/1154453721380552734/Comp_37.gif?ex=65fc5fcf&is=65e9eacf&hm=80d64265185575598dc3ed3ed981dcc85553e09236c38bbf3b88266a7348d0e6&=">
     </div>
   <div class="half-image loading-icon">
-    <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154453721783210107/Comp_38.gif">
+    <img src="https://media.discordapp.net/attachments/926858719684354058/1154453721783210107/Comp_38.gif?ex=65fc5fcf&is=65e9eacf&hm=0486ede5ccb6acbc39318ce4bc97fe6e56b9d8032d34f64798895810ffe29a43&=">
   </div>
-  <div class="https://cdn.discordapp.com/attachments/926858719684354058/1154453722261377044/Comp_39.gif">
+  <div class="https://media.discordapp.net/attachments/926858719684354058/1154453722261377044/Comp_39.gif?ex=65fc5fd0&is=65e9ead0&hm=2f413625ba4bfda8d501e3ac86ceb145b01fcc4676e12c7e192689462e97ab99&=">
   </div>
   <div class="half-image loading-icon">
-    <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154453722697564170/Comp_40.gif">
+    <img src="https://media.discordapp.net/attachments/926858719684354058/1154453722697564170/Comp_40.gif?ex=65fc5fd0&is=65e9ead0&hm=9f4564b053d116a96cf77fcd19aa8b86a85291c2be8f2ef267aed4de6cf3a465&=">
   </div>
 
     </div>
