--- a/lore.html
+++ b/lore.html
@@ -74,7 +74,7 @@
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/lux2_orig.gif">
         </div>
         <div class="half-image loading-icon">
-          <img src="https://cdn.discordapp.com/attachments/926858719684354058/1215716862344568983/Comp_5.gif?ex=65fdc38e&is=65eb4e8e&hm=030b7936a527352d900e0cb4ac05d58acc4c2c2b304ccdbb19dd3652f13ae586&">
+          <img src="https://media.discordapp.net/attachments/926858719684354058/1154453665378222183/Comp_33.gif?ex=65fc5fc2&is=65e9eac2&hm=59154ceab7003bf1b30eac5ce977dd3d8563bcccdc9009f99cfc69a78f7d7e90&=">
         </div>
       <div class="half-image loading-icon">
         <img src="https://64.media.tumblr.com/c0f2de6fbc04f2e7c4f0a916bcc7b0a8/f7ce94b7df52147b-e6/s540x810/10dd86ceb933bbe4915a7ee1bfa916435ad1015f.gifv">
