--- a/lore.html
+++ b/lore.html
@@ -134,7 +134,7 @@
                     <iframe src="https://www.youtube.com/embed/PVW-pl2JdMs" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
                   </div>  <br>   
                     <div class="embed-container">
-                      <iframe src="https://www.youtube.com/embed/NqysS1OvF3" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+                      <iframe src="https://www.youtube.com/embed/NqysS1OvF3E" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
                     </div>  <br>   
                     <div class="embed-container">
                       <iframe src="https://www.youtube.com/embed/g6opNt3-khM" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
