--- a/mv.html
+++ b/mv.html
@@ -52,7 +52,7 @@
     <div class="art-section">
       <div class="art-header">
         <h2>WILDFIRE Cover - Animated Music Video</h2>
-        <p>I was commissioned to do the music video for <a href="https://www.youtube.com/@Braxophone" text-decoration="none">a content creator's</a> cover of WILDFIRE, a song from HOYOVERSE's RPG game Honkai: Star Rail. Besides the character art illustration and the audio, I handled all other visuals including: creating the backgrounds based on Honkai's UI, animating the illustrations, transitions and effects, typography, lighting, and overall visual narrative. Every scene relates to the game's UI, game screens, and mechanics in some way.</p>
+        <p>I was commissioned to do the music video for <a href="https://www.youtube.com/@Braxophone" text-decoration="none">a content creator's</a> cover of WILDFIRE, a song from Hoyoverse's RPG game Honkai: Star Rail. Besides the character art illustration and the audio, I handled all the visuals including: creating the backgrounds based on Honkai's UI, animating the illustrations, transitions and effects, typography, lighting, and overall visual narrative. Every scene relates to the game's UI, game screens, and mechanics in some way.</p>
       </div>
 
       <div class="art-display"><br>
@@ -69,7 +69,13 @@
         <img src="https://media.discordapp.net/attachments/926858719684354058/1215723913145749535/eidolon.gif?ex=65fdca1f&is=65eb551f&hm=e8cb33c76e2d881e84bdd22707cc985b8e3834f9f18f3e7736e8228d937702ee&=">
       </div>
       <div class="half-image loading-icon">
+        <img src="https://media.discordapp.net/attachments/926858719684354058/1215723912634040410/despondent.gif?ex=65fdca1f&is=65eb551f&hm=58a2ef7df643f319f338fd0a827d7fa7a0539b1066589064d57d1775ddaedae0&=">
+      </div>
+      <div class="half-image loading-icon">
         <img src="https://media.discordapp.net/attachments/926858719684354058/1215723905478819910/achivements.gif?ex=65fdca1e&is=65eb551e&hm=d34c9691bcf79875a0cbf8724efb29a0cf908c3d06c96f130adc7168d98b8853&=">
+      </div>
+      <div class="half-image loading-icon">
+        <img src="https://media.discordapp.net/attachments/926858719684354058/1215723915016544306/something_to_declare.gif?ex=65fdca20&is=65eb5520&hm=8f59f9dc4d48012aadaa43b87d84243748e28a1a303a3dc5d9b04ed5a7831c2a&=">
       </div>
       <div class="half-image loading-icon">
         <img src="https://media.discordapp.net/attachments/926858719684354058/1215723914475348039/rend_the_cloud.gif?ex=65fdca20&is=65eb5520&hm=6330abd99cd27dd7b2985f8e121b979b90f1b71b7b5fb20bcd959e52df325b81&=">
