--- a/stinger.html
+++ b/stinger.html
@@ -76,6 +76,77 @@
           <img src="https://i.imgur.com/ytmh3Fb.gif">
         </div>
         <div class="half-image loading-icon">
+          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/vixella-540_1.gif">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://media.giphy.com/media/SIuhRluNb4FxmbzctN/giphy.gif">
+        </div>
+        <!-- Row 1 -->
+        <div class="half-image loading-icon">
+          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/pride-starting-soon_orig.gif">
+        </div>
+
+        <!-- Row 2 -->
+        <div class="half-image loading-icon">
+          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/540_orig.gif">
+        </div>
+
+        <div class="half-image loading-icon">
+          <img src="https://i.imgur.com/FKIjfcw.gif">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/zo-stream-ending-cat_orig.gif">
+        </div>
+        
+        <div class="half-image loading-icon">
+          <img src="https://i.imgur.com/YynSuy1.gif">
+        </div>
+
+        <div class="half-image loading-icon">
+          <img src="https://i.imgur.com/TxbcxWg.gif">
+        </div>
+
+        <div class="half-image loading-icon">
+          <img src="https://i.imgur.com/0k3KNOS.gif">
+        </div>
+
+        <div class="half-image loading-icon">
+          <img src="https://media.giphy.com/media/4H1AvX2Z3bnmPH9laD/giphy.gif">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/pawberri-starting-soon-screen_orig.gif">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://media.giphy.com/media/20NVx9H6CZvQ7U7NDD/giphy.gif">
+        </div>
+        <!-- Row 3 -->
+        <div class="half-image loading-icon">
+          <img src="https://media.giphy.com/media/k72Phd9MkDVDmobRtr/giphy.gif">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://media.giphy.com/media/9DruQECt28WbK5iIpa/giphy.gif">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://media.giphy.com/media/TJm06K5LOAkzmCAihc/source.gif">
+        </div>
+        <!-- Row 4 -->
+        <div class="half-image loading-icon">
+          <img src="https://media.giphy.com/media/3CUKhMAnnFs0bkg7rD/giphy.gif">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://media.giphy.com/media/cArlRP5R1BDtH3ukt6/giphy.gif">
+        </div>
+        <!-- Row 5 -->
+        <div class="half-image loading-icon">
+          <img src="https://media.giphy.com/media/8cddMic7kpmOFU7qZY/giphy.gif">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://i.imgur.com/autUpcp.gif">
+        </div>
+
+
+
+        <div class="half-image loading-icon">
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/pride-stinger-orig_orig.gif">
         </div>
         <!-- Row 1 -->
