--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
 
 
     <div class="item">
-      <a href="gaming.html">
-        <div class="image-container loading-icon"><img src="https://puu.sh/I6dI7/d4e06908cd.gif" alt="gaming"></div>
-        <span>Youtube and Twitch Commissions</span>
+      <a href="mv.html">
+        <div class="image-container loading-icon"><img src="https://media.discordapp.net/attachments/926858719684354058/1215727672928510082/Comp_2.gif?ex=65fdcda0&is=65eb58a0&hm=02270d84d35c84c3b1ba7d911c102fe18b9686cdd0713876749811e3a29aa499&="></div>
+        <span>Music Video Animation</span>
       </a>
     </div>
 
