--- a/index.html
+++ b/index.html
@@ -53,21 +53,21 @@
 
       <div class="item">
         <a href="lore.html">
-          <div class="image-container loading-icon"><img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExZWZ1NWMzbHBmamhnaGlpYzdzeTJuczFkOXRrbHBpZmF1Z3o0bnVvMyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/XSkuClGlENdaMj31J0/giphy.gif" alt="e3 booth monitors"></div>
+          <div class="image-container loading-icon"><img src="https://media.discordapp.net/attachments/926858719684354058/1215756242236997724/Comp_4.gif?ex=65fde83b&is=65eb733b&hm=a405e1cc7e47ca68819e53806da16382ee8d27a45477ce38992dcbe9ec2f3457&="></div>
           <span>Animated VTuber Lore Video</span>
         </a>
       </div>
 
       <div class="item">
         <a href="nexon.html">
-          <div class="image-container loading-icon"><img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExa3F4YjhrdHEwdjY4N202Mmw5NW14cDhoMWN6ZjllZHhueDduMjVnNiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/z7gG5yTcJi72CAt4em/giphy-downsized-large.gif" alt="e3 booth monitors"></div>
+          <div class="image-container loading-icon"><img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExa3F4YjhrdHEwdjY4N202Mmw5NW14cDhoMWN6ZjllZHhueDduMjVnNiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/z7gG5yTcJi72CAt4em/giphy-downsized-large.gif"></div>
           <span>MapleStory M Trailers for NEXON</span>
         </a>
       </div>
 
     <div class="item">
       <a href="vtuber.html">
-        <div class="image-container loading-icon"><img src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExeGJla2F1ZjRuNXJ4d2JvaTI4em96eWx3eGRuamg2Nnh0c29rc3BudSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/EBE486xwsa7q2PlkGP/giphy.gif" alt="miniscroller"></div>
+        <div class="image-container loading-icon"><img src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExeGJla2F1ZjRuNXJ4d2JvaTI4em96eWx3eGRuamg2Nnh0c29rc3BudSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/EBE486xwsa7q2PlkGP/giphy.gif"></div>
         <span>VTuber Trailers & Showcases</span>
       </a>
     </div>
@@ -102,7 +102,7 @@
              
           <div class="item">
             <a href="shows.html">
-              <div class="image-container loading-icon"><img src="https://64.media.tumblr.com/10c3e2ebde47de6cdbc00eadf639b69f/3639fee865b8cb1d-80/s400x600/2acd911cd84793396215d6ea38ad5794d479cdc5.gifv" alt="IGN Shows"></div>
+              <div class="image-container loading-icon"><img src="https://64.media.tumblr.com/10c3e2ebde47de6cdbc00eadf639b69f/3639fee865b8cb1d-80/s400x600/2acd911cd84793396215d6ea38ad5794d479cdc5.gifv"></div>
               <span>IGN Shows & Podcasts Graphics</span>
             </a>
           </div>
@@ -110,7 +110,7 @@
 
           <div class="item">
             <a href="manga.html">
-              <div class="image-container loading-icon"><img src="https://media.giphy.com/media/DCWHrUm3WEGpNWN0RO/giphy.gif" alt="motion manga"></div>
+              <div class="image-container loading-icon"><img src="https://media.giphy.com/media/DCWHrUm3WEGpNWN0RO/giphy.gif"></div>
               <span>Motion Manga, Art, and GIFs (for fun!)</span>
             </a>
           </div>
