--- a/animation.html
+++ b/animation.html
@@ -55,6 +55,12 @@
         <p>Various animated artworks done in After Effects. Artwork was pre-drawn by other artists.</a></p>
         </div>
 
+        <div class="full-image loading-icon">
+          <div class="embed-container">
+            <iframe src="https://www.youtube.com/embed/zj9VNh9eJiI" frameborder="0" allow="autoplay loop muted; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+          </div>
+        </div>
+
       <div class="art-display">
         <div class="half-image loading-icon">
           <img src="https://64.media.tumblr.com/c593bc073ff75a27542322e98b175255/f7ce94b7df52147b-11/s540x810/cfa45f85990694ecba6bb74bc11474972ea1e973.gifv">
