--- a/animation.html
+++ b/animation.html
@@ -55,13 +55,11 @@
         <p>Various animated artworks done in After Effects. Artwork was pre-drawn by other artists.</a></p>
         </div>
 
-        <div class="full-image loading-icon">
-          <div class="embed-container">
-            <iframe src="https://www.youtube.com/embed/zj9VNh9eJiI" frameborder="0" allow="autoplay loop muted; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-          </div>
-        </div>
 
       <div class="art-display">
+        <div class="half-image loading-icon">
+          <img src="https://cdn.discordapp.com/attachments/906291532208955413/1218716993037930566/Comp_3.gif?ex=6608ada5&is=65f638a5&hm=ba708aa68694c32d7a19c52d50a9b8c50278e408c054aaa22a43ae14c93d5e94&">
+        </div>
         <div class="half-image loading-icon">
           <img src="https://64.media.tumblr.com/c593bc073ff75a27542322e98b175255/f7ce94b7df52147b-11/s540x810/cfa45f85990694ecba6bb74bc11474972ea1e973.gifv">
         </div>
@@ -74,9 +72,6 @@
         <div class="half-image loading-icon">
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/abyzab-ending-screen-gif_orig.gif">
         </div>
-      <div class="half-image loading-icon">
-        <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/chibi-kae-gif_orig.gif">
-      </div>
       <div class="half-image loading-icon">
         <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExaW9nc255Z3MzdzRyb3hyZG9tdnppcWUzZnRxMWcxbzcwczJmbDZ0eSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/PQGidAADhHE8WSAbEv/giphy-downsized-large.gif">
       </div>
