--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="item">
         <a href="lore.html">
           <div class="image-container loading-icon"><img src="https://media.discordapp.net/attachments/926858719684354058/1215756242236997724/Comp_4.gif?ex=65fde83b&is=65eb733b&hm=a405e1cc7e47ca68819e53806da16382ee8d27a45477ce38992dcbe9ec2f3457&="></div>
-          <span>Animated VTuber Lore Video</span>
+          <span>Animated VTuber Lore Videos</span>
         </a>
       </div>
 
@@ -82,7 +82,7 @@
 
     <div class="item">
       <a href="animation.html">
-        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExZm82c2d6aTk5Z3JwZ25hODZ0eXR0NW1zZXVvenlyN3JwOHp0Zjd2OCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/aSrcVVzREtrE1WWE57/giphy.gif" alt="Suiting Up"></div>
+        <div class="image-container loading-icon"><img src="https://cdn.discordapp.com/attachments/906291532208955413/1218717860915056680/Comp_5.gif?ex=6608ae74&is=65f63974&hm=11978ce436c070b865e137d09acfdda40630d9ed56cc6307c9b26b3522203eb6&" alt="Suiting Up"></div>
         <span>Animated Artwork (pre-drawn)</span>
       </a>
     </div>
