--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
       <div class="item">
         <a href="nexon.html">
-          <div class="image-container loading-icon"><img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExa3F4YjhrdHEwdjY4N202Mmw5NW14cDhoMWN6ZjllZHhueDduMjVnNiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/z7gG5yTcJi72CAt4em/giphy-downsized-large.gif"></div>
+          <div class="image-container loading-icon"><img src="https://cdn.discordapp.com/attachments/906291532208955413/1218734353438216342/lucid-thumbnail.gif?ex=6608bdd0&is=65f648d0&hm=cb7a35682b6edfab0e5a9f5d72f641cae9e21f7095b490a08e45a1c9e7ab7d1c&"></div>
           <span>MapleStory M Trailers for NEXON</span>
         </a>
       </div>
