--- a/mv.html
+++ b/mv.html
@@ -57,31 +57,31 @@
 
       <div class="art-display"><br>
         <div class="half-image loading-icon">
-          <img src="https://media.discordapp.net/attachments/926858719684354058/1215723911283740754/blaze_through.gif?ex=65fdca1f&is=65eb551f&hm=74b33010826eb249712d9ea5662106c3403b8872389bcdf3640dd0eaf524320b&=">
+          <img src="https://cdn.discordapp.com/attachments/926858719684354058/1215723905478819910/achivements.gif?ex=66103f1e&is=65fdca1e&hm=2f10a5b4d7eaebfcddfe58d0375509accd63f620b1fcb99540adf44ccbe995bf&">
         </div>
         <div class="half-image loading-icon">
-          <img src="https://media.discordapp.net/attachments/926858719684354058/1215723913913573437/lightcone-gif.gif?ex=65fdca20&is=65eb5520&hm=deb9b4b6d7246dbc5d413790db473222d642722422d8bab86b7d23f23ec88bda&=">
+          <img src="https://cdn.discordapp.com/attachments/926858719684354058/1215723911283740754/blaze_through.gif?ex=66103f1f&is=65fdca1f&hm=0ba5ac3a812802a81954656acaa3c1f153be6e89875de4a1ca9fa7da4c452408&">
         </div>
       <div class="half-image loading-icon">
-        <img src="https://media.discordapp.net/attachments/926858719684354058/1215723915767316540/swarm_2.gif?ex=65fdca20&is=65eb5520&hm=a8037b5eda485f35b42a8ef1dd7030f16178d76d299589b1e3439bbbc50ebc52&=">
+        <img src="https://cdn.discordapp.com/attachments/926858719684354058/1215723911858229248/communing_trail.gif?ex=66103f1f&is=65fdca1f&hm=f001c600e9448a49232069440671b28af3b9ef0ae153de683f1efa906c9d3525&">
       </div>
       <div class="half-image loading-icon">
-        <img src="https://media.discordapp.net/attachments/926858719684354058/1215723913145749535/eidolon.gif?ex=65fdca1f&is=65eb551f&hm=e8cb33c76e2d881e84bdd22707cc985b8e3834f9f18f3e7736e8228d937702ee&=">
+        <img src="https://cdn.discordapp.com/attachments/926858719684354058/1215723912634040410/despondent.gif?ex=66103f1f&is=65fdca1f&hm=a4e6810c0056a7f1d485b442274d44ebb9f7c2748456848f603f2175a9d068bf&">
       </div>
       <div class="half-image loading-icon">
-        <img src="https://media.discordapp.net/attachments/926858719684354058/1215723912634040410/despondent.gif?ex=65fdca1f&is=65eb551f&hm=58a2ef7df643f319f338fd0a827d7fa7a0539b1066589064d57d1775ddaedae0&=">
+        <img src="https://cdn.discordapp.com/attachments/926858719684354058/1215723913145749535/eidolon.gif?ex=66103f1f&is=65fdca1f&hm=5209d2aaec962d2f9e7c2d149e7ea5ffb4b127d4e66a91985390346fc6033097&">
       </div>
       <div class="half-image loading-icon">
-        <img src="https://media.discordapp.net/attachments/926858719684354058/1215723915016544306/something_to_declare.gif?ex=65fdca20&is=65eb5520&hm=8f59f9dc4d48012aadaa43b87d84243748e28a1a303a3dc5d9b04ed5a7831c2a&=">
+        <img src="https://cdn.discordapp.com/attachments/926858719684354058/1215723913913573437/lightcone-gif.gif?ex=66103f20&is=65fdca20&hm=7354cf8656b47e12f3aaac9fca627ad5c7637fdc0c682d723053852e5bb443b9&">
       </div>
       <div class="half-image loading-icon">
-        <img src="https://media.discordapp.net/attachments/926858719684354058/1215723905478819910/achivements.gif?ex=65fdca1e&is=65eb551e&hm=d34c9691bcf79875a0cbf8724efb29a0cf908c3d06c96f130adc7168d98b8853&=">
+        <img src="https://cdn.discordapp.com/attachments/926858719684354058/1215723914475348039/rend_the_cloud.gif?ex=66103f20&is=65fdca20&hm=1348967c43e91aa8ba65cfd01ce778cda6202adb0df52711de54d4dd1e258dbb&">
       </div>
       <div class="half-image loading-icon">
-        <img src="https://media.discordapp.net/attachments/926858719684354058/1215723914475348039/rend_the_cloud.gif?ex=65fdca20&is=65eb5520&hm=6330abd99cd27dd7b2985f8e121b979b90f1b71b7b5fb20bcd959e52df325b81&=">
+        <img src="https://cdn.discordapp.com/attachments/926858719684354058/1215723915016544306/something_to_declare.gif?ex=66103f20&is=65fdca20&hm=24db0bc6b108a4cb742f08ab874d756b382eee5fd5d53438fb1581b47a07068a&">
       </div>
     <div class="half-image loading-icon">
-      <img src="https://media.discordapp.net/attachments/926858719684354058/1215723911858229248/communing_trail.gif?ex=65fdca1f&is=65eb551f&hm=e050e0e9dcc6ba3845535ced7c15c91bb13447acd33a9e3919419a31212b149a&=">
+      <img src="https://cdn.discordapp.com/attachments/926858719684354058/1215723915767316540/swarm_2.gif?ex=66103f20&is=65fdca20&hm=f50a3a05580cbedbbece9ad928f322f72716141e5cca1146783d17773519ee3f&">
     </div>
     
   </div>
