--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
       <div class="item">
         <a href="nexon.html">
-          <div class="image-container loading-icon"><img src="https://cdn.discordapp.com/attachments/906291532208955413/1218734353438216342/lucid-thumbnail.gif?ex=6608bdd0&is=65f648d0&hm=cb7a35682b6edfab0e5a9f5d72f641cae9e21f7095b490a08e45a1c9e7ab7d1c&"></div>
+          <div class="image-container loading-icon"><img src="https://64.media.tumblr.com/77ddda938d887589ffac92a902eea0c2/af9bd931bc4a5eb6-67/s400x600/aeabd2817d5270a77ddfb961315c71bce4d36590.gifv"></div>
           <span>MapleStory M Trailers for NEXON</span>
         </a>
       </div>
@@ -76,14 +76,14 @@
     
     <div class="item">
       <a href="stinger.html">
-        <div class="image-container loading-icon"><img src="https://cdn.discordapp.com/attachments/906291532208955413/1154481888447168542/wayfinder_thumb.gif?ex=660eef0b&is=65fc7a0b&hm=88f5c8dbc5e28947bf34c3dbe3989f6369da3844eaa6522d28b24d304773c0a8&"></div>
+        <div class="image-container loading-icon"><img src="https://64.media.tumblr.com/bc3ab99d7907918c16fe6161c9659c6b/af9bd931bc4a5eb6-f8/s400x600/a4ff77bece6932b026435828b8b1dfc55ab4d771.gifv"></div>
         <span>Stream Stingers / Transitions</span>
       </a>
     </div>
 
     <div class="item">
       <a href="animation.html">
-        <div class="image-container loading-icon"><img src="https://cdn.discordapp.com/attachments/906291532208955413/1218717860915056680/Comp_5.gif?ex=6608ae74&is=65f63974&hm=11978ce436c070b865e137d09acfdda40630d9ed56cc6307c9b26b3522203eb6&" alt="Suiting Up"></div>
+        <div class="image-container loading-icon"><img src="https://64.media.tumblr.com/d7b2e812ff9ea8ba3534ddd0eee40f05/af9bd931bc4a5eb6-06/s400x600/4e96fce59b56f68ce2b1553effa55671c66c2995.gifv" alt="Suiting Up"></div>
         <span>Animated Artwork (pre-drawn)</span>
       </a>
     </div>
