--- a/lore.html
+++ b/lore.html
@@ -74,7 +74,7 @@
           <img src="https://cdn.discordapp.com/attachments/926858719684354058/1215716863867224085/Comp_21.gif?ex=6610388f&is=65fdc38f&hm=d0dfb043b68ebb507209908400a0bfa2de5c1b21dfa3972c307f44abb5b64296&">
         </div>
       <div class="half-image loading-icon">
-        <img src="https://cdn.discordapp.com/attachments/926858719684354058/1155355555980910684/Comp_3.gif?ex=6608e236&is=65f66d36&hm=b0a4e9c09a46862713d57456c2b33f53e5e63a66050cd2ed7806fceedf2bc1db&">
+        <img src="https://64.media.tumblr.com/d199fb2c7bf09f79327525b27c15ff03/af9bd931bc4a5eb6-5e/s540x810/e18b917a2372531433a2eb8d42bcbc8e69bb4865.gifv">
       </div>
       <div class="half-image loading-icon">
         <img src="https://cdn.discordapp.com/attachments/926858719684354058/1215717773666418788/Comp_17.gif?ex=66103968&is=65fdc468&hm=ababcb2df57fe3f1e1097e3cbd3a33c9a3a8e39b9e91d2c07e7029d5f1b0db28&">
