--- a/nexon.html
+++ b/nexon.html
@@ -59,10 +59,10 @@
 
         
     <div class="half-image loading-icon">
-      <img src="https://cdn.discordapp.com/attachments/906291532208955413/1218729890786967633/Lucid1.gif?ex=6608b9a8&is=65f644a8&hm=289f1328bec5a32381f855f5dcbba77194ed4c7a927a6675ba82df482210cab4&">
+      <img src="https://64.media.tumblr.com/4faedd7477ce3df495dfbbc436ff17b9/af9bd931bc4a5eb6-a1/s1280x1920/900682e2650ae6ff0cd7a1233d5b050ef4d9706c.gifv">
     </div>
     <div class="half-image loading-icon">
-      <img src="https://cdn.discordapp.com/attachments/906291532208955413/1218729890359152700/Lucid2.gif?ex=6608b9a8&is=65f644a8&hm=06fff62904adc66777cbe362aed3e717eb71727662236eddbadc9ea630f44854&">
+      <img src="https://64.media.tumblr.com/87d4d0cc3c1bd803c1189e0444fde74b/af9bd931bc4a5eb6-1f/s500x750/99aeaf0f9150884dcd9f54b7c1485d46546481d4.gifv">
     </div>
 
         <div class="half-image loading-icon">
