--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
     
     <div class="item">
       <a href="stinger.html">
-        <div class="image-container loading-icon"><img src="https://64.media.tumblr.com/bc3ab99d7907918c16fe6161c9659c6b/af9bd931bc4a5eb6-f8/s400x600/a4ff77bece6932b026435828b8b1dfc55ab4d771.gifv"></div>
+        <div class="image-container loading-icon"><img src="https://cdn.discordapp.com/attachments/906291532208955413/1154481888447168542/wayfinder_thumb.gif?ex=6618298b&is=6605b48b&hm=6f17d22328deb7d454d9a16975dc6f18c634bcb9446df5628328521143d6b072&"></div>
         <span>Stream Stingers / Transitions</span>
       </a>
     </div>
 
     <div class="item">
       <a href="animation.html">
-        <div class="image-container loading-icon"><img src="https://64.media.tumblr.com/d7b2e812ff9ea8ba3534ddd0eee40f05/af9bd931bc4a5eb6-06/s400x600/4e96fce59b56f68ce2b1553effa55671c66c2995.gifv" alt="Suiting Up"></div>
+        <div class="image-container loading-icon"><img src="https://64.media.tumblr.com/bc3ab99d7907918c16fe6161c9659c6b/af9bd931bc4a5eb6-f8/s400x600/a4ff77bece6932b026435828b8b1dfc55ab4d771.gifv" alt="Suiting Up"></div>
         <span>Animated Artwork (pre-drawn)</span>
       </a>
     </div>
