--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
       <div class="item">
         <a href="mv.html">
-          <div class="image-container loading-icon"><img src="https://cdn.discordapp.com/attachments/926858719684354058/1215727672928510082/Comp_2.gif?ex=661042a0&is=65fdcda0&hm=3bd2ce7a68426e855ab45d317db1139fec6c62fff57b2cb536b9edef2967dc63&"></div>
+          <div class="image-container loading-icon"><img src="https://64.media.tumblr.com/7f8b9fb60f61826de4d5a38446723937/c0099088b576d111-c5/s400x600/a0a2e3ff330035375eb005c1a832f33d89ef8ade.gifv"></div>
           <span>Music Video Animation</span>
         </a>
       </div>
@@ -76,7 +76,7 @@
     
     <div class="item">
       <a href="stinger.html">
-        <div class="image-container loading-icon"><img src="https://cdn.discordapp.com/attachments/906291532208955413/1154481888447168542/wayfinder_thumb.gif?ex=6618298b&is=6605b48b&hm=6f17d22328deb7d454d9a16975dc6f18c634bcb9446df5628328521143d6b072&"></div>
+        <div class="image-container loading-icon"><img src="https://64.media.tumblr.com/9df72ac6e98ef7137b3c19b63661f00d/c0099088b576d111-e8/s400x600/d8e18d63a2efd1bfe97850a601ed22a9680b171b.gifv"></div>
         <span>Stream Stingers / Transitions</span>
       </a>
     </div>
