--- a/lore.html
+++ b/lore.html
@@ -59,10 +59,10 @@
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/lux7_orig.gif">
         </div>
         <div class="half-image loading-icon">
-          <img src="https://cdn.discordapp.com/attachments/926858719684354058/1215716862344568983/Comp_5.gif?ex=6610388e&is=65fdc38e&hm=50b05843b54335f48371b2046c64d09088fde9b57cb437973d423ed52b4ff6f6&">
+          <img src="https://64.media.tumblr.com/09cec920c24321120f5c3bb0f7e76a7a/c0099088b576d111-77/s540x810/16ab8042fa3587f3951d00b24e430faae61ca9dc.gifv">
         </div>
       <div class="half-image loading-icon">
-        <img src="https://cdn.discordapp.com/attachments/926858719684354058/1215716863401529404/Comp_20.gif?ex=6610388f&is=65fdc38f&hm=727730619ab0142d16ea03500e1fd93ce5a12f17b240fb4e70a9795ca9b46b1b&">
+        <img src="https://64.media.tumblr.com/af5c7281d792e9f6579fb03be62a3a05/c0099088b576d111-e3/s540x810/b052635764c7c0a63c1c0df88af92d07b7c6bfe7.gifv">
       </div>
         <div class="half-image loading-icon">
           <img src="https://64.media.tumblr.com/ba0cf66b2a890eebff5878ff4776e3ba/f7ce94b7df52147b-2e/s540x810/4036495f1628e9906f8181bd9074ca5c75f02370.gifv">
@@ -71,13 +71,13 @@
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/lux2_orig.gif">
         </div>
         <div class="half-image loading-icon">
-          <img src="https://cdn.discordapp.com/attachments/926858719684354058/1215716863867224085/Comp_21.gif?ex=6610388f&is=65fdc38f&hm=d0dfb043b68ebb507209908400a0bfa2de5c1b21dfa3972c307f44abb5b64296&">
+          <img src="https://64.media.tumblr.com/7c7504856add2f98861276cdc196037c/c0099088b576d111-b4/s540x810/4f8e83f3d3a6b5fb3639e57d58352c8d1c7f1121.gifv">
         </div>
       <div class="half-image loading-icon">
         <img src="https://64.media.tumblr.com/d199fb2c7bf09f79327525b27c15ff03/af9bd931bc4a5eb6-5e/s540x810/e18b917a2372531433a2eb8d42bcbc8e69bb4865.gifv">
       </div>
       <div class="half-image loading-icon">
-        <img src="https://cdn.discordapp.com/attachments/926858719684354058/1215717773666418788/Comp_17.gif?ex=66103968&is=65fdc468&hm=ababcb2df57fe3f1e1097e3cbd3a33c9a3a8e39b9e91d2c07e7029d5f1b0db28&">
+        <img src="https://64.media.tumblr.com/c9ecf011f7d6d258a0c60fedccd158d0/c0099088b576d111-5a/s540x810/bc5f030ee6fd4d40132b793356c50b8b3993d1d2.gifv">
       </div>
     <div class="half-image loading-icon">
       <img src="https://cdn.discordapp.com/attachments/926858719684354058/1215717778653188126/Comp_18.gif?ex=66103969&is=65fdc469&hm=2d429c8597896af11785d96af9ec5bfce31ecec2b2813ed2826b8fac93542c74&">
