--- a/lore.html
+++ b/lore.html
@@ -83,13 +83,13 @@
       <img src="https://cdn.discordapp.com/attachments/926858719684354058/1215717778653188126/Comp_18.gif?ex=66103969&is=65fdc469&hm=2d429c8597896af11785d96af9ec5bfce31ecec2b2813ed2826b8fac93542c74&">
     </div>
     <div class="half-image loading-icon">
-      <img src="https://cdn.discordapp.com/attachments/926858719684354058/1215717861990080603/dyseal_1.gif?ex=6610397d&is=65fdc47d&hm=ad080a3652c23a88c1492b1d61816923250916b029f64b051d83320fbe333ccf&">
+      <img src="https://64.media.tumblr.com/67e9d0ef5d95850cc6cd7ae048b06fa0/c0099088b576d111-a0/s540x810/3a6da926f3d72a65b384f26b54df59d76273be7c.gifv">
     </div>
       <div class="half-image loading-icon">
         <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/lux6_orig.gif">
       </div>
       <div class="half-image loading-icon">
-        <img src="https://cdn.discordapp.com/attachments/926858719684354058/1215717863248240710/dyseal_3.gif?ex=6610397d&is=65fdc47d&hm=4f362f9b19312514ab7a36f245d3a6c648bb5f0d58173065b4d7b313f188acb1&">
+        <img src="https://64.media.tumblr.com/b1e2480fe845dd6c83aae1f328dd6cda/c0099088b576d111-bf/s540x810/c32b56cb02bbe6c3c7fab259e462ea64221d06ad.gifv">
       </div>
     
 
